--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     },
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "symfony/var-dumper": "5.x-dev"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.0@dev"
