--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,13 @@
     },
     "require": {
         "php": "^7.4",
-        "symfony/var-dumper": "5.x-dev"
+        "symfony/var-dumper": "5.x-dev",
+        "symfony/console": "5.x-dev"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.0@dev"
-    }
+    },
+    "bin": [
+        "nat"
+    ]
 }
