--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,13 @@
     "require": {
         "php": "^7.4",
         "symfony/var-dumper": "5.x-dev",
-        "symfony/console": "5.x-dev"
+        "symfony/console": "5.x-dev",
+        "voku/portable-ascii": "^1.4"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.12.0@dev"
+        "phpstan/phpstan": "^0.12.0@dev",
+        "pragmarx/ia-str": "7.3.0",
+        "doctrine/inflector": "^1.2"
     },
     "bin": [
         "nat"
