--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": "^7.4",
         "symfony/var-dumper": "5.x-dev",
         "symfony/console": "5.x-dev",
-        "pragmarx/ia-str": "^7.3"
+        "pragmarx/ia-str": "^7.3",
+        "doctrine/inflector": "^1.2"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.0@dev"
